syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.matheuscarv69";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.matheuscarv69;

service KeyManagerRegistraGrpcService {
  rpc registrar (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeyManagerRemoverService{
  rpc remover(RemoverChavePixRequest) returns (RemoverChavePixResponse){}
}

message RemoverChavePixRequest{
  string pixId = 1;
  string clienteId = 2;
}

message RemoverChavePixResponse{
  string mensagem = 1;
}

enum TipoDeChaveGrpc{
  TIPO_DE_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoDeContaGrpc {
  TIPO_CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoDeChaveGrpc tipoDeChave = 2;
  string chave = 3;
  TipoDeContaGrpc tipoDeConta = 4;
}

message RegistraChavePixResponse {
  string pixId = 1;
}